@@ -586,26 +586,28 @@ ambsdtar_selfcheck(
     printf("OK ambsdtar\n");
     if (bsdtar_path) {
 	if (check_file(bsdtar_path, X_OK)) {
-	    char *bsdtar_version;
-	    GPtrArray *argv_ptr = g_ptr_array_new();
+	    if (check_exec_for_suid(bsdtar_path, TRUE)) {
+		char *bsdtar_version;
+		GPtrArray *argv_ptr = g_ptr_array_new();
 
-	    g_ptr_array_add(argv_ptr, bsdtar_path);
-	    g_ptr_array_add(argv_ptr, "--version");
-	    g_ptr_array_add(argv_ptr, NULL);
+		g_ptr_array_add(argv_ptr, bsdtar_path);
+		g_ptr_array_add(argv_ptr, "--version");
+		g_ptr_array_add(argv_ptr, NULL);
 
-	    bsdtar_version = get_first_line(argv_ptr);
-	    if (bsdtar_version) {
-		char *tv, *bv;
-		for (tv = bsdtar_version; *tv && !g_ascii_isdigit(*tv); tv++);
-		for (bv = tv; *bv && *bv != ' '; bv++);
-		if (*bv) *bv = '\0';
-		printf("OK ambsdtar bsdtar-version %s\n", tv);
-	    } else {
-		printf(_("ERROR [Can't get %s version]\n"), bsdtar_path);
+		bsdtar_version = get_first_line(argv_ptr);
+		if (bsdtar_version) {
+		    char *tv, *bv;
+		    for (tv = bsdtar_version; *tv && !g_ascii_isdigit(*tv); tv++);
+		    for (bv = tv; *bv && *bv != ' '; bv++);
+		    if (*bv) *bv = '\0';
+		    printf("OK ambsdtar bsdtar-version %s\n", tv);
+		} else {
+		    printf(_("ERROR [Can't get %s version]\n"), bsdtar_path);
+		}
+
+		g_ptr_array_free(argv_ptr, TRUE);
+		amfree(bsdtar_version);
 	    }
-
-	    g_ptr_array_free(argv_ptr, TRUE);
-	    amfree(bsdtar_version);
 	}
     } else {
 	printf(_("ERROR [BSDTAR program not available]\n"));
@@ -628,6 +630,7 @@ ambsdtar_selfcheck(
 
     if (argument->calcsize) {
 	char *calcsize = g_strjoin(NULL, amlibexecdir, "/", "calcsize", NULL);
+	check_exec_for_suid(calcsize, TRUE);
 	check_file(calcsize, X_OK);
 	check_suid(calcsize);
 	amfree(calcsize);
@@ -677,6 +680,14 @@ ambsdtar_estimate(
 	char *dirname;
 	int   nb_exclude;
 	int   nb_include;
+	char *calcsize = g_strjoin(NULL, amlibexecdir, "/", "calcsize", NULL);
+
+	if (!check_exec_for_suid(calcsize, FALSE)) {
+	    errmsg = g_strdup_printf("'%s' binary is not secure", calcsize);
+	    goto common_error;
+	    return;
+	}
+
 	if (bsdtar_directory) {
 	    dirname = bsdtar_directory;
 	} else {
@@ -703,6 +714,11 @@ ambsdtar_estimate(
 
     if (!bsdtar_path) {
 	errmsg = g_strdup(_("BSDTAR-PATH not defined"));
+	goto common_error;
+    }
+
+    if (!check_exec_for_suid(bsdtar_path, FALSE)) {
+	errmsg = g_strdup_printf("'%s' binary is not secure", bsdtar_path);
 	goto common_error;
     }
 
@@ -1083,6 +1099,11 @@ ambsdtar_backup(
     if (!bsdtar_path) {
 	error(_("BSDTAR-PATH not defined"));
     }
+
+    if (!check_exec_for_suid(bsdtar_path, FALSE)) {
+	error("'%s' binary is not secure", bsdtar_path);
+    }
+
     if (!state_dir) {
 	error(_("STATE-DIR not defined"));
     }
@@ -1384,6 +1405,10 @@ ambsdtar_restore(
 
     if (!bsdtar_path) {
 	error(_("BSDTAR-PATH not defined"));
+    }
+
+    if (!check_exec_for_suid(bsdtar_path, FALSE)) {
+	error("'%s' binary is not secure", bsdtar_path);
     }
 
     cmd = g_strdup(bsdtar_path);
