@@ -169,7 +169,7 @@ $app->add_property('GNUTAR-PATH' => '/do/not/exists');
 $restore = $app->restore('objects' => ['./foo', './bar'], 'data' => $backup->{'data'}, data_sigpipe => 1);
 is($restore->{'exit_status'}, 256, "error status of 1 if GNUTAR-PATH does not exists");
 chomp $restore->{'errs'};
-ok($restore->{'errs'} =~ /amgtar: error \[exec \/do\/not\/exists: No such file or directory\]\nERROR \/do\/not\/exists exited with status 1: see.*/, "correct error for No such file or directory") || diag($restore->{'errs'});
+ok($restore->{'errs'} =~ /amgtar: '\/do\/not\/exists' binary is not secure/, "correct error for No such file or directory") || diag($restore->{'errs'});
 
 # cleanup
 rmtree($root_dir);
